Fix layout spacing

--- a/style.css
+++ b/style.css
@@ -54,14 +54,14 @@
   --size-950: 5.5rem;
 
   --container-padding: var(--size-550);
+  --hero-padding: var(--size-850) var(--size-600) var(--size-900);
   --button-padding: var(--size-500) var(--size-600);
 
   /* margin below hero and above CTA */
   --main-margin: var(--size-800);
 
   --feature-card-margin: var(--size-700);
-  --container-max-width: 49.5em;
-
+  --container-max-width: 48.5em;
 }
 
 /* 
@@ -396,7 +396,7 @@ a:visited:hover {
 }
 
 .call-to-action {
-  max-width: var(--container-max-width);
+  max-width: var(10rem);
 }
 
 .call-to-action-container {
@@ -409,7 +409,10 @@ a:visited:hover {
 
 .topbar {
   position: absolute;
-  margin: var(--size-400) var(--size-600);
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  z-index: 10;
 }
 
 .topbar .icon {
@@ -424,7 +427,7 @@ a:visited:hover {
 }
 
 .hero-container {
-  padding: var(--size-850) var(--size-600) var(--size-900);
+  padding: var(--hero-padding);
   border-radius: 0% 0% 4% 4%;
   background-color: var(--clr-neutral-100);
   box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 12px -5px;
@@ -434,7 +437,8 @@ a:visited:hover {
 }
 
 .hero {
-  border: red solid 2px
+  position: relative;
+  border: red solid 2px;
 }
 
 /* Hero Section */
@@ -494,7 +498,7 @@ a:visited:hover {
 
 .call-to-action-container {
   border-radius: 5% 5% 0px 0px;
-  padding: var(--size-900) var(--size-600) var(--size-900);
+  padding: var(--size-900) var(--size-700) var(--size-900);
   display: grid;
   justify-content: center;
   align-items: center;
@@ -546,6 +550,12 @@ footer p:nth-of-type(2) {
     --fs-400: 1.125rem;
     --fs-300: 1rem;
     --container-padding: var(--size-400);
+  }
+}
+
+@media (min-width: 42em) and (max-width: 57em) {
+  :root {
+    --hero-padding: var(--size-900) var(--size-800) var(--size-900);
   }
 }
 
@@ -632,6 +642,7 @@ footer p:nth-of-type(2) {
 @media (min-width: 57em) {
   :root {
     background-color: aqua;
+    --hero-padding: var(--size-900) var(--size-800) var(--size-900);
 
     /* --main-margin: var(--size-800); */
     /* --feature-card-margin: var(--size-700); */
@@ -642,11 +653,6 @@ footer p:nth-of-type(2) {
   .hero {
     display: flex;
     flex-direction: row-reverse;
-    
-  }
-
-  .hero-container {
-    padding: var(--size-900) var(--size-800) var(--size-900);
   }
 
   .hero .content {
@@ -672,18 +678,18 @@ footer p:nth-of-type(2) {
 
   .call-to-action .content {
     text-align: left;
-    flex: 5.5;
+    flex: 6;
     /* background-color: green; */
   }
 
   .call-to-action img {
-    flex: 4.5;
+    flex: 4;
   }
 
   /* Topbar */
-  .topbar {
+  /* .topbar {
     margin: var(--size-500) var(--size-600);
-  }
+  } */
 
   .topbar img {
     width: 64px;
@@ -737,9 +743,9 @@ footer p:nth-of-type(2) {
     --main-margin: var(--size-900); */
   }
 
-  .topbar {
+  /* .topbar {
     margin: var(--size-650) var(--size-850);
-  }
+  } */
 
   .features .card {
     display: flex;
@@ -770,5 +776,7 @@ footer p:nth-of-type(2) {
     /* background-color: antiquewhite; */
   }
 
-
+  .call-to-action-container {
+    padding: var(--size-900) var(--size-950) var(--size-900);
+  }
 }
